# pydantic-ai-coffee

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/pydantic_coffee/: main.py
src/pydantic_coffee.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/pydantic_coffee/agents/: intent_agent.py  order_count_agent.py  order_pattern_agent.py
src/pydantic_coffee/data/: coffee_orders.csv
src/pydantic_coffee/models/: coffee.py
src/pydantic_coffee/services/: order_service.py
