[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pydantic_coffee"
version = "0.1.0"
description = "An AI agent framework"
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.4.0",
    "fastapi>=0.95.0",
    "uvicorn>=0.23.0",
    "pydantic-ai",
    "anthropic>=0.8.0",
    "boto3>=1.34.0",
    "python-dotenv",
    "logfire>=3.1.1",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    "greenlet>=1.1.0",
    "pandas>=2.1.3",
]

[tool.setuptools.packages.find]
where = ["src"]
